github_data_collector/src/data/issue_comment/adikhosla_feature-extraction.txt
Could anyone please explain the meaning of 'dictionary_size' and how it affects the speed? Thank you.

Good day!
When  starts compile.m , I have compile error:

**>> compile**
Building with 'MinGW64 Compiler (C++)'.
Error using mex
D:\antispoofing\Matlab_spoofdet_hog_lbp_Gab__svm\feature-extraction-master\util\pixelwise_hog31.cc: In function 'mxArray* process(const mxArray*, const mxArray*)':
D:\antispoofing\Matlab_spoofdet_hog_lbp_Gab__svm\feature-extraction-master\util\pixelwise_hog31.cc:48:44: error: cannot convert 'const size_t* {aka const long long unsigned int*}' to 'const int*' in initialization
   const int *dims = mxGetDimensions(mximage);
                                            ^
D:\antispoofing\Matlab_spoofdet_hog_lbp_Gab__svm\feature-extraction-master\util\pixelwise_hog31.cc:81:72: error: cannot convert 'int*' to 'const size_t* {aka const long long unsigned int*}' for argument '2' to 'mxArray*
mxCreateNumericArray_730(size_t, const size_t*, mxClassID, mxComplexity)'
   mxArray *mxfeat = mxCreateNumericArray(3, out, mxDOUBLE_CLASS, mxREAL);



Respected Sir,
When I run following command 
datasets_feature(datasets, train_lists, test_lists, feature, c);
I got error:
Error using imread (line 349)
File "sun2.jpg" does not exist.

Error in imgread (line 12)
    I = imread(img);

Error in build_dictionary>(parfor body)
(line 49)
      img = imgread(filelist{perm(i)},
      p);

Error in build_dictionary (line 47)
    parfor i=1:num_images

Error in datasets_feature (line 31)
      c.feature_config.(feature).dictionary
      = build_dictionary(train_lists{i},
      feature, c);

how to remeove this error.
Thanks
Histogram refinement results in https://github.com/Ashwani21/Local-texture-descriptors are very promising.
Hi 
    When I try to extract lbp features and ssim features with Matlab2015b, the code cannot work.  
    **For lbp feature，the errors are listed below:**
   
Dataset: demo
Processing filelist (train, lbp): batch 0 of 1
Processing filelist (train, lbp): batch 1 of 1
Error using getmapping (line 37)
ASSUMEDTYPE must be an integer type name.

Error in lbp_original (line 3)
mapping=getmapping(8,'u2');

Error in lbp_original_4x4 (line 3)
feature_L0(:,1) = lbp_original(I);

Error in lbp_feature (line 10)
[lbp_L0 lbp_L1 lbp_L2] = lbp_original_4x4(im);

Error in extract_lbp (line 17)
d = lbp_feature(img);

Error in extract_feature (line 15)
[feat, x, y, wid, hgt] = feval(['extract_' feature], img, c);

Error in filelist_feature (line 23)
    parfor i=1:length(filelist)

Error in batch_feature (line 42)
        poolfeat = filelist_feature('', filelist(this_batch), feature, c);

Error in datasets_feature (line 34)
  batch_feature(train_lists{i}, 'train', feature, c);

Error in demo (line 24)
datasets_feature(datasets, train_lists, test_lists, feature, c);

   **For ssim featurem, the errors are listed below:**

Dataset: demo
Learning dictionary for feature: ssim, size 20
Running k-means, dictionary size 20...done!
Saving dictionary: cache//demo//dictionary_ssim_20.mat
Processing filelist (train, ssim): batch 0 of 1
Processing filelist (train, ssim): batch 1 of 1
Error using cellfun
Non-scalar in Uniform output, at index 1, output 1.
Set 'UniformOutput' to false.

Error in max_pooling (line 36)
				emptyIdx = find(cellfun(@(x) sum(x)==0, idx));

Error in filelist_feature (line 37)
    poolfeat = max_pooling(llcfeat, info, c.pool_region, p.pyramid_levels);

Error in batch_feature (line 42)
        poolfeat = filelist_feature('', filelist(this_batch), feature, c);

Error in datasets_feature (line 34)
  batch_feature(train_lists{i}, 'train', feature, c);

Error in demo (line 24)
datasets_feature(datasets, train_lists, test_lists, feature, c);
 
Hi, I am trying to run your code in Matlab R2011a and having quite a bit of difficulty. Compile.m gives me several error messages such as "features/ssim/vggSsim/MEXfindnearestl2.cpp: In function 'void mexFunction(int, mxArray**, int, const mxArray**)':
features/ssim/vggSsim/MEXfindnearestl2.cpp:62: warning: deprecated conversion from string constant to 'char*'"

Then when I try demo.m, I get this type of error:
??? Undefined function or method 'matlabpool' for input arguments of type 'char'.

Error in ==> openPool at 20
  if(matlabpool('size')==0)

Error in ==> datasets_feature at 16
    openPool(c.cores);

Error in ==> demo at 24
datasets_feature(datasets, train_lists, test_lists, feature, c);

Could you please help?

Thanks,

Create a gitignore file to ignore unwanted files from getting committed.
